# multi_robot_arm

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/ur/ur5/: initial_positions.yaml  joint_limits_planning.yaml  kinematics.yaml  moveit_controller_manager.yaml  ompl_planning.yaml  robot.srdf  ros_controllers_robot.yaml  visual_parameters.yaml
env-hooks/: multi_robot_arm.dsv.in
launch/: gazebo_arm.launch.py
urdf/ur/ur5/: ur_macro.xacro  ur_ros2_control.xacro  ur_urdf.xacro
worlds/: empty.world
