<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_robot_arm</name>
  <version>1.0.0</version>
  <description>This package demonstrate spawning multiple Robotic arms in Gazebo simulation environment separated by their own namespace</description>
  <maintainer email="arshad.mehmood@intel.com">Arshad Mehmood</maintainer>
  <license>Apache 2.0</license>

  <depend>xacro</depend>
  <depend>moveit_core</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>  
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
